--- a/style.css
+++ b/style.css
@@ -1,24 +1,168 @@
-.parent {
-    background-color: #B2CABD;
-    padding: 10px;
-    display: flex;
-    width: 500px;
-    height:600px;
-    box-sizing: border-box;
-    
-    
-}
-div.parent#photo  {
-    width: 100px;
-    height: 100px;
-}
+.page {
 
-div.parent#icon > iconify-icon {
-    display: flex;
-    flex-direction: row-reverse;
 }
-.parent#center >p {
+.block-1 {
+    display: flex;
+    justify-content: space-between;
+    padding: 70px 70px 70px 100px;
+    height: 40px;
+}
+.logo-1  {
+    display: flex;
+    height: 40px;
+    width: 40px;
+    background-color: black;
+    color: white;
+    line-height: 40px;
+    justify-content: center;
+    margin-right: 0 12px 0 0 ;
+    
+    
+}
+.logo-2 {
+    display: flex;
+    width: 134.469px;
+    height: 26px;
+    transform: translate(56px, -44px);
+    
+}
+.logo-right {
+    display: flex;
+    align-items: center;
+}
+.logo-right .icon-1 {
+    color: black;
+    font-size: 24px;
+    margin: 4px;
+    border-radius: 50%;
+    border:  solid white;
+    background-color: #F26464;
 
    
+}
+.logo-right .icon-2 {
+    color: black;
+    font-size: 24px;
+    margin: 4px;
+    border-radius: 50%;
+    border:  solid white;
+    background-color: #F26464;
+
+
+    
+
+}
+.logo-right .icon-3 {
+    color: black;
+    font-size: 24px;
+    margin: 4px;
+    border-radius: 50%;
+    border:  solid white;
+    background-color: #F26464;
+
+
+    
+}
+img {
+    height: 530px;
+    width: 450px;
+    padding: 0 30px 50px 100px;
+}
+.block-2 {
+    display: flex;
+    padding-right: 100px;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    padding :0 100px 0 70px;
+    width: 500px;   
+}
+.title-1 {
+    font-family: 'Inter',sans-serif;
+    font-size: 16px;
+    padding: 0 0 30px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+.title-2{
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 60px;
+    color: #000;
+
+}
+.title th {
+    text-align: left;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 60px;
+    color: #F26464;
+}
+
+.title td {
+    font-family: 'Inter',sans-serif;
+    font-size: 16px ;
+    letter-spacing: 1px;
+    font-weight: lighter;
+    
+}
+
+
+
+.block-3 {
+    padding: 60px 70px 30px 100px;
+}
+.second {
+    border-bottom: 3px solid #F26464;
+    padding-bottom: 7px;
+    font-family: 'Inter',sans-serif;
+    width: 128px;
+
+}
+.block-3 p {
+    color: #373737;
+    font-size: 24px;
+    font-family: 'Inter',sans-serif;
+    line-height: 50px;
+    font-weight: 300;
+}
+.btn-1  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.btn {
+    color:#F26464;
+    padding: 17px 30px;
+    border: 2px solid #F26464;
+    border-radius: 60px;
+    font-family: 'Inter',sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 13px;
+    letter-spacing: 3px;
+    margin-top: 0;
+    cursor: pointer;
+}
+.btn:hover {
+    background-color: #F26464;
+    color: white;
+}
+.icon-1:hover {
+    background-color: #000;
+    color: white;
+}
+.icon-2:hover {
+    background-color: black;
+    color: white;
+
+}
+.icon-3:hover {
+    background-color: #000;
+    color: white;
 
 }
