--- a/style.css
+++ b/style.css
@@ -31,34 +31,52 @@
     align-items: center;
 }
 .logo-right .icon-1 {
-    color: black;
-    font-size: 24px;
+    display: flex;
+    color: white;
+    font-size: 16px;
+    width: 24px;
+    height: 24px;
     margin: 4px;
     border-radius: 50%;
     border:  solid white;
     background-color: #F26464;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
    
 }
 .logo-right .icon-2 {
-    color: black;
-    font-size: 24px;
+    display: flex;
+    color: white;
+    font-size: 16px;
+    width: 24px;
+    height: 24px;
     margin: 4px;
     border-radius: 50%;
     border:  solid white;
     background-color: #F26464;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
 
     
 
 }
 .logo-right .icon-3 {
-    color: black;
-    font-size: 24px;
+    display: flex;
+    color: white;
+    font-size: 16px;
+    width: 24px;
+    height: 24px;
     margin: 4px;
     border-radius: 50%;
     border:  solid white;
     background-color: #F26464;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
 
     
