--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ img {
     border-bottom: 3px solid #F26464;
     padding-bottom: 7px;
     font-family: 'Inter',sans-serif;
-    width: 128px;
+    width: 89px;
+    font-size: 16px;
 
 }
 .block-3 p {
