--- a/style.css
+++ b/style.css
@@ -116,12 +116,17 @@ img {
     color: #000;
 
 }
+.title-3 {
+    margin: 3px;
+    padding: 3px;
+}
 .title th {
     text-align: left;
     font-weight: 600;
     font-size: 36px;
     line-height: 60px;
     color: #F26464;
+    margin: 3px;
 }
 
 .title td {
@@ -129,6 +134,7 @@ img {
     font-size: 16px ;
     letter-spacing: 1px;
     font-weight: lighter;
+    margin: 3px;
     
 }
 
