--- a/style.css
+++ b/style.css
@@ -184,6 +184,11 @@ img {
     background-color: #000;
     color: white;
 }
+img:hover {
+    -ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1); 
+    transform: scale(1.1); 
+}    
 .block-4 {
     display: flex;
     justify-content: space-between;
